# AIDevInClass

./: Design Document.docx  prompts.docx  ~$rompts.docx  ~$sign Document.docx
websocket-demo/: package.json  server.js
websocket_client/: CMakeLists.txt
websocket_client/include/: server_manager.hpp  ws_client.hpp
websocket_client/scripts/: index.html  package-lock.json
websocket_client/src/: main.cpp  server_manager.cpp  ws_client.cpp
